# playgorund

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
apps/: main.py
apps/inter_kal_cam/: index.html  p5.js
apps/interactive_kal_mouse/: index.html  p5.js
apps/llm-explorer/: main.py
config/: global.json
scripts/: setup-all.sh
