[tool.poetry]
name = "playground-monorepo"
version = "0.1.0"
description = "Monorepo for experimental projects with AI agents, LLMs, and Python"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
